--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,21 +7,18 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
+  - name: CV
     url: '#posts'
     weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
-  - name: Talks
+  - name: Publications
     url: '#talks'
     weight: 40
-  - name: Publications
+  - name: Contact
     url: '#featured'
     weight: 50
-  - name: Contact
-    url: '#contact'
-    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
