--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: CV
-    url: '#posts'
+    url: test
     weight: 20
   - name: Projects
     url: '#projects'
@@ -17,7 +17,7 @@ main:
     url: '#publications'
     weight: 40
   - name: Contact
-    url: '#featured'
+    url: '#contact'
     weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
